APPENG-3201: add project name to the source path

--- a/deploy/tekton/tasks/execute_sast_ai_workflow.yaml
+++ b/deploy/tekton/tasks/execute_sast_ai_workflow.yaml
@@ -56,7 +56,7 @@ spec:
         - name: KNOWN_FALSE_POSITIVE_FILE_PATH 
           value: "$(workspaces.false-positives-workspace.path)/ignore.err"
         - name: GIT_REPO_PATH
-          value: "$(workspaces.source-workspace.path)"
+          value: "$(workspaces.source-workspace.path)/$(params.PROJECT_NAME)"
         - name: LLM_API_KEY
           valueFrom:
             secretKeyRef:
